import type { Color } from '@digdir/designsystemet-react/colors';
import type { ComponentType } from 'react';
import { Fragment } from 'react/jsx-runtime';
import { ArrowRightIcon, PlusIcon, TrashFillIcon } from '@udir-design/icons';
import preview from '.storybook/preview';
import { Button } from '../button/Button';
import { Field } from '../field/Field';
import { Link as LinkComponent } from '../link/Link';
import type { LinkProps } from '../link/Link';
import { Select } from '../select/Select';
import { Textfield } from '../textfield/Textfield';
import { Heading } from '../typography/heading/Heading';
import { Label } from '../typography/label/Label';
import { Paragraph } from '../typography/paragraph/Paragraph';
import { Card, CardBlock } from './Card';
import { Card as FakeCard } from './docs/FakeCard';

const studentsImg =
  'https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D';

const schoolSuppliesImg =
  'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&w=1644&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D';

const meta = preview.meta({
  component: FakeCard,
  subcomponents: {
    'Card.Block': CardBlock,
  },
  tags: ['digdir'],
  parameters: {
    componentOrigin: {
      originator: 'digdir',
    },
    customStyles: {
      width: '100%',
      maxWidth: 800,
      alignItems: 'center',
      display: 'grid',
      gap: 'var(--ds-size-4)',
      gridTemplateColumns: 'repeat(auto-fit, minmax(280px , 320px))',
    },
  },
  args: {
    // Children is required in Card props, so we must set something
    children: undefined,
  },
});

export const Preview = meta.story({
  args: {
    'data-color': 'neutral',
  },
  render: (args) => (
    <Card {...args}>
      <Heading>Tittel</Heading>
      <Paragraph>Innhold</Paragraph>
      <Paragraph data-size="sm">Fotnote</Paragraph>
    </Card>
  ),
});

const VariantsMap: Record<
  string,
  { 'data-color': Color; variant: 'default' | 'tinted' }
> = {
  neutralDefault: {
    'data-color': 'neutral',
    variant: 'default',
  },
  neutralTinted: {
    'data-color': 'neutral',
    variant: 'tinted',
  },
  accentDefault: {
    'data-color': 'accent',
    variant: 'default',
  },
  accentTinted: {
    'data-color': 'accent',
    variant: 'tinted',
  },
  support1Default: {
    'data-color': 'support1',
    variant: 'default',
  },
  support1Tinted: {
    'data-color': 'support1',
    variant: 'tinted',
  },
  support2Default: {
    'data-color': 'support2',
    variant: 'default',
  },
  support2Tinted: {
    'data-color': 'support2',
    variant: 'tinted',
  },
};

export const Variants = meta.story({
  render: (args) => (
    <>
      {Object.entries(VariantsMap).map(([key, value]) => (
        <Card key={key} {...args} {...value}>
          <Card.Block>
            <Paragraph>
              {Object.entries(value).map(([v, k]) => (
                <Fragment key={v}>
                  {v}: {k}
                  <br />
                </Fragment>
              ))}
            </Paragraph>
          </Card.Block>
        </Card>
      ))}
    </>
  ),
});

export const Media = meta.story({
  render: (args) => (
    <>
      <Card {...args}>
        <Card.Block>
          <img
            src={schoolSuppliesImg}
            alt="Fotografi av forskjellig skoleutstyr"
          />
        </Card.Block>
        <Card.Block>
          <Heading>Skoleutstyr</Heading>
          <Paragraph>
            Fylkeskommunen skal sørge for at elevene i videregående skole får
            gratis lærebøker og andre trykte og digitale læremidler og digitalt
            utstyr.
          </Paragraph>
        </Card.Block>
      </Card>
      <Card {...args}>
        <Card.Block>
          <Heading>Skoleutstyr</Heading>
          <Paragraph>
            Fylkeskommunen skal sørge for at elevene i videregående skole får
            gratis lærebøker og andre trykte og digitale læremidler og digitalt
            utstyr.
          </Paragraph>
        </Card.Block>
        <Card.Block>
          <img
            src={schoolSuppliesImg}
            alt="Fotografi av forskjellig skoleutstyr"
          />
        </Card.Block>
      </Card>
    </>
  ),
});

export const Video = meta.story({
  args: {
    'data-color': 'neutral',
  },
  render: (args) => (
    <Card {...args}>
      <Card.Block>
        <iframe
          data-chromatic="ignore"
          src="https://player.vimeo.com/video/992000551?h=03734e8f67"
          width="320px"
          height="179px"
          allow="autoplay; fullscreen; picture-in-picture"
          title="30 år med digitalt innsyn"
        ></iframe>
      </Card.Block>
      <Card.Block>
        <Heading>Ny opplæringslov</Heading>
        <Paragraph>
          Kunnskapsminister Kari Nessa Nordtun om den nye opplæringsloven.
        </Paragraph>
      </Card.Block>
    </Card>
  ),
});

const options = [
  { value: 'lærer', label: 'Lærer' },
  { value: 'elev', label: 'Elev' },
  { value: 'forelder', label: 'Forelder' },
];

export const Composed = meta.story({
  render: (args) => (
    <>
      <style>
        {`
.card-composed-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}`}
      </style>
      <Card {...args}>
        <Card.Block>
          <div className="card-composed-heading">
            <Heading>Rolle 1</Heading>
            <Button variant="secondary" data-color="danger" data-size="sm">
              <TrashFillIcon aria-hidden />
              Fjern
            </Button>
          </div>
        </Card.Block>
        <Card.Block>
          <Field>
            <Label>Velg rolle</Label>
            <Select>
              {options.map(({ value, label }, index) => (
                <Select.Option key={index} value={value}>
                  {label}
                </Select.Option>
              ))}
            </Select>
          </Field>
          <Textfield label="Fødselsnummer" />
          <Textfield label="Etternavn" />
        </Card.Block>
        <Card.Block>
          <Button variant="secondary" data-size="sm">
            Legg til rolle
            <PlusIcon aria-hidden />
          </Button>
        </Card.Block>
      </Card>
    </>
  ),
});

const WithLinkBase = (Link: ComponentType<LinkProps>) =>
  meta.story({
    render: (args) => (
      <>
        <Card data-color="support1" {...args}>
          <Card.Block>
            <img src={studentsImg} alt="" />
          </Card.Block>
          <Card.Block>
            <Heading>
              <Link
                href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
                target="_blank"
                rel="noopener noreferrer"
              >
                Påmelding til eksamen
              </Link>
            </Heading>
            <Paragraph>
              Du må melde deg på innen 1. februar for våreksamen og 15.
              september for høsteksamen.
            </Paragraph>
            <Paragraph data-size="sm">Privatisteksamen</Paragraph>
          </Card.Block>
        </Card>
        <Card {...args} data-color="neutral">
          <Card.Block>
            <Heading>
              <Link
                href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
                target="_blank"
                rel="noopener noreferrer"
              >
                Påmelding til eksamen
              </Link>
            </Heading>
            <Paragraph>
              Du må melde deg på innen 1. februar for våreksamen og 15.
              september for høsteksamen.
            </Paragraph>
            <Paragraph data-size="sm">Privatisteksamen</Paragraph>
          </Card.Block>
          <Card.Block>
            <img src={studentsImg} alt="" />
          </Card.Block>
        </Card>
      </>
    ),
  });

export const WithLink = WithLinkBase(LinkComponent).extend({});

export const WithAnchor = WithLinkBase(({ children, ...props }) => (
  <a {...props}>{children}</a>
)).extend({});

export const WithLinkFocused = WithLink.extend({
  parameters: {
    pseudo: {
      focusVisible: 'a',
    },
  },
});

export const WithAnchorFocused = WithAnchor.extend({
  parameters: {
    pseudo: {
      focusVisible: 'a',
    },
  },
});

export const Horizontal = meta.story({
  render: (args) => {
    const url =
      'https://www.udir.no/contentassets/0ae1c5846c254b9f8800c59c393fd03d/skolemiljo.png';
    return (
      <>
        <style>
          {`
.card-horizontal-card {
  display: grid;
  grid-auto-flow: column;
  width: 700px;
}
.card-horizontal-img {
  height: 100%;
  object-fit: cover;
}`}
        </style>
        <Card {...args} className="card-horizontal-card">
          <Card.Block>
            <img
              src={url}
              alt="Barn som spiser lunsj"
              className="card-horizontal-img"
            />
          </Card.Block>
          <Card.Block>
            <Heading>
              <a
                href="https://www.udir.no/laring-og-trivsel/skolemiljo/slik-kan-skolen-handtere-et-utrygt-skolemiljo/"
                target="_blank"
                rel="noopener noreferrer"
              >
                Hva gjør du når en elev ikke har det trygt og godt på skolen?
              </a>
            </Heading>
            <Paragraph>
              Hvis dere mistenker eller kjenner til at en elev ikke har det
              trygt og godt, skal dere snarest undersøke saken. Vi har laget råd
              om hva dere kan gjøre.
            </Paragraph>
          </Card.Block>
        </Card>
      </>
    );
  },
});

export const Cluster = meta.story({
  parameters: {
    customStyles: {
      display: 'block',
      width: '100%',
      maxWidth: 800,
    },
  },
  render: (args) => {
    const links = [
      { text: 'Lesing', url: '#' },
      { text: 'Barnehagemiljø', url: '#' },
      { text: 'Skolemiljø', url: '#' },
      { text: 'Fravær i skolen', url: '#' },
      { text: 'God digital praksis', url: '#' },
      { text: 'Kunstig intelligens i skolen', url: '#' },
    ];

    return (
      <>
        <style>
          {`
.card-cluster-wrapper {
  container-type: inline-size;
}
.card-cluster {
  --dsc-card-content-margin-block: 0;
  --dsc-card-padding: var(--ds-size-2) var(--ds-size-6);
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(min(100%, 250px), 1fr));
  column-gap: var(--ds-size-4);
}
.card-cluster__item {
  padding-block: var(--ds-size-4);
  border-block-end: 1px solid var(--ds-color-border-subtle);
  text-decoration: none;
}
.card-cluster__item:last-child {
  border-block-end: none;
}
@container (min-width: 564px) {
  .card-cluster__item:nth-last-child(2) {
    border-block-end: none;
  }
}
.card-cluster__item:hover {
  text-decoration: underline;
}
.card-cluster__item > svg {
  flex-shrink: 0;
  width: var(--ds-size-6);
  height: var(--ds-size-6);
  align-self: flex-start;
}`}
        </style>
        <div className="card-cluster-wrapper">
          <Card {...args} className="card-cluster">
            {links.map((link) => (
              <LinkComponent
                href={link.url}
                key={link.text}
                className="card-cluster__item"
              >
                <ArrowRightIcon aria-hidden />
                <span>{link.text}</span>
              </LinkComponent>
            ))}
          </Card>
        </div>
      </>
    );
  },
});
