// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cluster 1`] = `
<style>
  .card-cluster-wrapper {
  container-type: inline-size;
}
.card-cluster {
  --dsc-card-content-margin-block: 0;
  --dsc-card-padding: var(--ds-size-2) var(--ds-size-6);
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(min(100%, 250px), 1fr));
  column-gap: var(--ds-size-4);
}
.card-cluster__item {
  padding-block: var(--ds-size-4);
  border-block-end: 1px solid var(--ds-color-border-subtle);
  text-decoration: none;
}
.card-cluster__item:last-child {
  border-block-end: none;
}
@container (min-width: 564px) {
  .card-cluster__item:nth-last-child(2) {
    border-block-end: none;
  }
}
.card-cluster__item:hover {
  text-decoration: underline;
}
.card-cluster__item > svg {
  flex-shrink: 0;
  width: var(--ds-size-6);
  height: var(--ds-size-6);
  align-self: flex-start;
}
</style>
<div>
  <div data-variant="default">
    <a href="#">
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
      <span>
        Lesing
      </span>
    </a>
    <a href="#">
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
      <span>
        Barnehagemiljø
      </span>
    </a>
    <a href="#">
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
      <span>
        Skolemiljø
      </span>
    </a>
    <a href="#">
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
      <span>
        Fravær i skolen
      </span>
    </a>
    <a href="#">
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
      <span>
        God digital praksis
      </span>
    </a>
    <a href="#">
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
      <span>
        Kunstig intelligens i skolen
      </span>
    </a>
  </div>
</div>
`;

exports[`Composed 1`] = `
<style>
  .card-composed-heading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
</style>
<div data-variant="default">
  <div>
    <div>
      <h2>
        Rolle 1
      </h2>
      <button
        data-variant="secondary"
        type="button"
        data-color="danger"
        data-size="sm"
      >
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="1em"
          height="1em"
          fill="none"
          viewbox="0 0 24 24"
          focusable="false"
          role="img"
          aria-hidden="true"
        >
          <path
            fill="currentColor"
            fill-rule="evenodd"
            d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
            clip-rule="evenodd"
          >
          </path>
        </svg>
        Fjern
      </button>
    </div>
  </div>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg rolle
      </label>
      <select id="<removed>">
        <option value="lærer">
          Lærer
        </option>
        <option value="elev">
          Elev
        </option>
        <option value="forelder">
          Forelder
        </option>
      </select>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Fødselsnummer
      </label>
      <div>
        <input
          type="text"
          id="<removed>"
        >
      </div>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Etternavn
      </label>
      <div>
        <input
          type="text"
          id="<removed>"
        >
      </div>
    </ds-field>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      data-size="sm"
    >
      Legg til rolle
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M12.75 5.5a.75.75 0 0 0-1.5 0v5.75H5.5a.75.75 0 0 0 0 1.5h5.75v5.75a.75.75 0 0 0 1.5 0v-5.75h5.75a.75.75 0 0 0 0-1.5h-5.75z"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Horizontal 1`] = `
<style>
  .card-horizontal-card {
  display: grid;
  grid-auto-flow: column;
  width: 700px;
}
.card-horizontal-img {
  height: 100%;
  object-fit: cover;
}
</style>
<div
  data-variant="default"
  data-clickdelegatefor="<removed>"
>
  <div>
    <img
      alt="Barn som spiser lunsj"
      src="https://www.udir.no/contentassets/0ae1c5846c254b9f8800c59c393fd03d/skolemiljo.png"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/laring-og-trivsel/skolemiljo/slik-kan-skolen-handtere-et-utrygt-skolemiljo/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Hva gjør du når en elev ikke har det trygt og godt på skolen?
      </a>
    </h2>
    <p data-variant="default">
      Hvis dere mistenker eller kjenner til at en elev ikke har det trygt og godt, skal dere snarest undersøke saken. Vi har laget råd om hva dere kan gjøre.
    </p>
  </div>
</div>
`;

exports[`Media 1`] = `
<div data-variant="default">
  <div>
    <img
      alt="Fotografi av forskjellig skoleutstyr"
      src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&amp;w=1644&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      Skoleutstyr
    </h2>
    <p data-variant="default">
      Fylkeskommunen skal sørge for at elevene i videregående skole får gratis lærebøker og andre trykte og digitale læremidler og digitalt utstyr.
    </p>
  </div>
</div>
<div data-variant="default">
  <div>
    <h2>
      Skoleutstyr
    </h2>
    <p data-variant="default">
      Fylkeskommunen skal sørge for at elevene i videregående skole får gratis lærebøker og andre trykte og digitale læremidler og digitalt utstyr.
    </p>
  </div>
  <div>
    <img
      alt="Fotografi av forskjellig skoleutstyr"
      src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?q=80&amp;w=1644&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;

exports[`Preview 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <h2>
    Tittel
  </h2>
  <p data-variant="default">
    Innhold
  </p>
  <p
    data-variant="default"
    data-size="sm"
  >
    Fotnote
  </p>
</div>
`;

exports[`Variants 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <div>
    <p data-variant="default">
      data-color: neutral
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="neutral"
>
  <div>
    <p data-variant="default">
      data-color: neutral
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="accent"
>
  <div>
    <p data-variant="default">
      data-color: accent
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <p data-variant="default">
      data-color: accent
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="support1"
>
  <div>
    <p data-variant="default">
      data-color: support1
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="support1"
>
  <div>
    <p data-variant="default">
      data-color: support1
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="support2"
>
  <div>
    <p data-variant="default">
      data-color: support2
      <br>
      variant: default
      <br>
    </p>
  </div>
</div>
<div
  data-variant="tinted"
  data-color="support2"
>
  <div>
    <p data-variant="default">
      data-color: support2
      <br>
      variant: tinted
      <br>
    </p>
  </div>
</div>
`;

exports[`Video 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <div>
    <iframe
      data-chromatic="ignore"
      src="https://player.vimeo.com/video/992000551?h=03734e8f67"
      width="320px"
      height="179px"
      allow="autoplay; fullscreen; picture-in-picture"
      title="30 år med digitalt innsyn"
    >
    </iframe>
  </div>
  <div>
    <h2>
      Ny opplæringslov
    </h2>
    <p data-variant="default">
      Kunnskapsminister Kari Nessa Nordtun om den nye opplæringsloven.
    </p>
  </div>
</div>
`;

exports[`With Anchor 1`] = `
<div
  data-variant="default"
  data-color="support1"
  data-clickdelegatefor="<removed>"
>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="neutral"
  data-clickdelegatefor="<removed>"
>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;

exports[`With Anchor Focused 1`] = `
<div
  data-variant="default"
  data-color="support1"
  data-clickdelegatefor="<removed>"
>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="neutral"
  data-clickdelegatefor="<removed>"
>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;

exports[`With Link 1`] = `
<div
  data-variant="default"
  data-color="support1"
  data-clickdelegatefor="<removed>"
>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="neutral"
  data-clickdelegatefor="<removed>"
>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;

exports[`With Link Focused 1`] = `
<div
  data-variant="default"
  data-color="support1"
  data-clickdelegatefor="<removed>"
>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
</div>
<div
  data-variant="default"
  data-color="neutral"
  data-clickdelegatefor="<removed>"
>
  <div>
    <h2>
      <a
        href="https://www.udir.no/eksamen-og-prover/eksamen/ta-fag-som-privatist/"
        target="_blank"
        rel="noopener noreferrer"
        id="<removed>"
      >
        Påmelding til eksamen
      </a>
    </h2>
    <p data-variant="default">
      Du må melde deg på innen 1. februar for våreksamen og 15. september for høsteksamen.
    </p>
    <p
      data-variant="default"
      data-size="sm"
    >
      Privatisteksamen
    </p>
  </div>
  <div>
    <img
      alt
      src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&amp;w=1470&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
  </div>
</div>
`;
